# noahh

./: .gitignore  .gitmodules  CMakeLists.txt  EULA  README.md  entry.cpp
.github/workflows/: build.yml
bindings/: Cocos2d.bro  GeometryDash.bro
cmake/: NoahhFile.cmake  Platform.cmake
codegen/src/: AddressGen.cpp  HeaderGen.cpp  ModifyGen.cpp  SourceGen.cpp  WrapperGen.cpp
docs/: InterfaceHistory.md
loader/: CMakeLists.txt  README.md  old_cmake.txt
loader/hash/: CMakeLists.txt  hash.cpp  hash.hpp  picosha3.h
loader/include/Noahh/: Bindings.hpp  CNoahh.h  DefaultInclude.hpp  Loader.hpp  Modify.hpp  Noahh.hpp  UI.hpp  Utils.hpp
loader/include/Noahh/c++stl/: gdstdlib.hpp
loader/include/Noahh/cocos/: .gitignore  CMakeLists.txt
loader/include/Noahh/hook-core/: Handler.hpp  Hook.hpp
loader/include/Noahh/loader/: API.hpp  Dispatch.hpp  Event.hpp  Hook.hpp  Interface.hpp  Loader.hpp  Log.hpp  Mod.hpp  Types.hpp  cnoahh.h
loader/include/Noahh/meta/: callconv.hpp  cdecl.hpp  common.hpp  defaultconv.hpp  function.hpp  membercall.hpp  meta.hpp  optcall.hpp  preproc.hpp  thiscall.hpp  tuple.hpp  x86.hpp
loader/include/Noahh/modify/: Addresses.hpp  Comparer.hpp  Field.hpp  InternalMacros.hpp  Modify.hpp  Traits.hpp  Types.hpp  Wrapper.hpp
loader/include/Noahh/platform/: android.hpp  cplatform.h  ios.hpp  macos.hpp  platform.hpp  windows.hpp
loader/include/Noahh/ui/: BasedButton.hpp  BasedButtonSprite.hpp  IconButtonSprite.hpp  InputNode.hpp  ListView.hpp  MDTextArea.hpp  MenuInputNode.hpp  Notification.hpp  Popup.hpp  SceneManager.hpp  ScrollLayer.hpp  Scrollbar.hpp  SelectList.hpp  TextRenderer.hpp
loader/include/Noahh/utils/: Ref.hpp  Result.hpp  VersionInfo.hpp  addresser.hpp  casts.hpp  cocos.hpp  conststring.hpp  convert.hpp  file.hpp  general.hpp  json_check.hpp  map.hpp  operators.hpp  platform.hpp  string.hpp  timer.hpp  types.hpp  vector.hpp
loader/launcher/ios/: install.sh  main.cpp  pkg.py
loader/launcher/windows/: CMakeLists.txt  proxyLoader.c
loader/lilac/: .gitignore  CMakeLists.txt  LICENSE
loader/lilac/src/hook/: CMakeLists.txt  hook.cpp  impl.hpp  ios.hpp  macos.hpp  platform.hpp  readme.md  windows.hpp
loader/lilac/src/meta/: readme.md
loader/lilac/test/: CMakeLists.txt  hook_test.cpp  meta_test.cpp
loader/resources/: about.md  resources.json
loader/src/: main.cpp
loader/src/cocos2d-ext/: ZipUtils.cpp
loader/src/core/: Core.cpp  Core.hpp  Hook.cpp  MacOS.cpp  MacOS.hpp  Platform.hpp  Windows.cpp  Windows.hpp
loader/src/hooks/: LoadingLayer.cpp  MenuLayer.cpp  MessageBoxFix.cpp  dictionary_fixes.cpp  handler_fixes.cpp  persist.cpp  save.cpp  update.cpp  updateResources.cpp
loader/src/index/: Index.cpp  Index.hpp  InstallTicket.cpp  fetch.cpp  fetch.hpp
loader/src/internal/: FileWatcher.hpp  InternalLoader.cpp  InternalLoader.hpp  InternalMod.cpp  InternalMod.hpp  about.hpp.in  crashlog.hpp
loader/src/internal/ios/: FileWatcher.mm  crashlog.cpp
loader/src/internal/mac/: FileWatcher.mm  crashlog.cpp
loader/src/internal/windows/: FileWatcher.cpp  crashlog.cpp  info.rc.in
loader/src/load/: Event.cpp  Hook.cpp  Interface.cpp  Loader.cpp  Log.cpp  Mod.cpp  Patch.cpp  cnoahh.cpp  load.cpp
loader/src/load/ios/: Mod.mm
loader/src/load/mac/: Mod.cpp
loader/src/load/windows/: Mod.cpp
loader/src/mac/: gdstdlib.cpp
loader/src/ui/nodes/: BasedButton.cpp  BasedButtonSprite.cpp  IconButtonSprite.cpp  InputNode.cpp  ListView.cpp  MDTextArea.cpp  MenuInputNode.cpp  Notification.cpp  Popup.cpp  SceneManager.cpp  ScrollLayer.cpp  Scrollbar.cpp  TextRenderer.cpp
loader/src/utils/: addresser.cpp  cocos.cpp  file.cpp  string.cpp  time.cpp  version.cpp
loader/src/utils/ios/: util.mm
loader/test/: shared.hpp
loader/test/dependency/: CMakeLists.txt  main.cpp  mod.json
loader/test/main/: CMakeLists.txt  main.cpp  mod.json
(+378 files in other folders)
